--- a/index.html
+++ b/index.html
@@ -767,7 +767,7 @@
     <script src="assets/js/themeColors.js"></script>
 
     <!-- coustom js -->
-    <script src="assets/js/coustom1.js"></script>
+    <script src="assets/js/coustom.js"></script>
 
 </body>
 </html>
